--- a/ToDoApp/MainPage.xaml
+++ b/ToDoApp/MainPage.xaml
@@ -4,33 +4,27 @@
              x:Class="ToDoApp.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
+        <StackLayout>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            <Grid ColumnDefinitions="Auto, 2*, 3*" ColumnSpacing="15" Padding="10" BackgroundColor="LightBlue">
+                <Label>Id</Label>
+                <Label Grid.Column="1">Nazwa</Label>
+                <Label Grid.Column="2">Opis</Label>
+            </Grid>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
+            <CollectionView ItemsSource="{Binding TasksList}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid ColumnDefinitions="Auto, 2*, 3*" ColumnSpacing="15" Padding="10">
+                            <Label Text="{Binding Id}"/>
+                            <Label Grid.Column="1" Text="{Binding Name}" FontAttributes="Bold"/>
+                            <Label Grid.Column="2" Text="{Binding Desc}"/>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            
+        </StackLayout>
     </ScrollView>
 
 </ContentPage>
