--- a/ToDoApp/AddTaskPage.xaml
+++ b/ToDoApp/AddTaskPage.xaml
@@ -12,10 +12,11 @@
                 Tytuł zadania:
             </Label>
 
-            <Entry Grid.Column="1"></Entry>
+            <Entry x:Name="TitleTxt" Grid.Column="1"></Entry>
         </Grid>
 
         <Editor
+            x:Name="DetailsTxt"
             HeightRequest="150"
             Placeholder="Szczegóły zadania..."
             Margin="0,10,0,10"
@@ -23,7 +24,7 @@
             
         </Editor>
 
-        <Button Text="Zapisz">
+        <Button x:Name="SaveBtn" Text="Zapisz" Clicked="SaveBtn_Clicked">
             
         </Button>
         
